# Spark

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.backend.yml  docker-compose.test.yml  docker-compose.yml  package-lock.json  pyproject.toml
backend/: .dockerignore  Dockerfile  MiniDoc.md  data.json  pyproject.toml  test_data_db.json
backend/chat/: consumers.py  middleware.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_initial.py  0003_message_is_edited.py
backend/recommendations/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/recommendations/migrations/: 0001_initial.py  0002_initial.py
backend/spark/: asgi.py  settings.py  urls.py  wsgi.py
backend/user/: admin.py  backends.py  models.py  serializers.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_gender_info_interests_photos_alter_user_date_joined_and_more.py  0003_rename_interests_interest_rename_photos_photo_and_more.py
frontend/: Dockerfile  components.json  index.html  package-lock.json  package.json  vite.config.js
frontend/public/images/: signup.avif
frontend/src/: App.jsx  i18n.js  index.css  main.jsx
frontend/src/components/: GlobalErrorFallback.jsx  KlipyPicker.jsx  LoginForm.jsx  SignupForm.jsx  index.js  login-form.jsx  signup-form.jsx  theme-provider.jsx
frontend/src/context/: AuthContext.jsx  PresenceContext.jsx
nginx/: nginx.conf
spark/spark/: asgi.py  settings.py  urls.py
spark/user/: views.py
tests/: register_users.js
(+70 files in other folders)
