[project]
name = "site"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.6",
    "django>=6.0.3",
    "django-extensions>=4.1",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "ipython>=9.12.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
